fix marking error in firefox; fix item disalignment on marker text;

--- a/style/tracker.scss
+++ b/style/tracker.scss
@@ -95,6 +95,10 @@ body {
     background-color: rgb(0,0,0);
     margin: 0px;
     color: white;
+
+    * {
+        user-select: none;
+    }
 }
 
 .content {
