--- a/style/tracker/item.scss
+++ b/style/tracker/item.scss
@@ -29,7 +29,7 @@
     flex-shrink: 0;
     line-height: 0.7em;
     border: solid 2px transparent;
-    user-select: none;
+    overflow: hidden;
     text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 }
 
